--- a/AspNetCoreWebApplicationTest/AspNetCoreWebApplicationTest.csproj
+++ b/AspNetCoreWebApplicationTest/AspNetCoreWebApplicationTest.csproj
@@ -17,6 +17,6 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AspNetCoreWebApplication\AspNetCoreWebApplication.csproj" />
+    <ProjectReference Include="..\AspNetCoreWebApplication\AspNetCoreWebApplication.csproj" Version="2.3.1"/>
   </ItemGroup>
 </Project>
